<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    >

    <EditText
        android:id="@+id/keyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="start"
        android:textColor="@drawable/word"
        android:textStyle="bold"
        android:hint="@string/search_hint"/>

    <Button
        android:id="@+id/search_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/keyword"
        android:layout_below="@+id/keyword"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/ic_action_search"
        android:paddingLeft="35dp"
        android:paddingRight="35sp"
        android:text="@string/search_button"
        android:textColor="@drawable/button_word"
        android:textSize="30sp" />
	<!-- 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_description"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:paddingTop="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@drawable/word" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:maxHeight="5sp"
        android:src="@drawable/searching"/>
 	-->

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp" >
        
        <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookListView"
        android:paddingLeft="15sp"
        android:paddingRight="10sp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:id="@+id/prev"
        android:background="@drawable/button"
        android:textColor="@drawable/button_word"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10sp"
        android:paddingRight="15sp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableLeft="@drawable/ic_action_back"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:background="@drawable/button"
        android:textColor="@drawable/button_word"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="15sp"
        android:paddingRight="10sp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableRight="@drawable/ic_action_forward"/>
    </RelativeLayout>

</RelativeLayout>
